--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
 
     <title>BS4</title>
   </head>
-  <body>
+  <body class="pb-5 mb-5">
     <div class="container">
+      <div class="alert alert-danger">This is and important message</div>
       <h1 class="display-2">Intro into bootstrap</h1>
       <h2 class="display-4">smaller</h2>
       <input class="form-control mb-3" type="text" placeholder="Enter text" />
@@ -35,8 +36,41 @@
         </div>
       </div>
       <hr />
-      <div class="box bg-primary">Box</div>
-      <div class="box bg-success">Box</div>
+
+      <div class="d-flex justify-content-end justify-content-md-center">
+        <div class="box bg-primary p-5">Box</div>
+        <div class="box bg-success p-5">Box</div>
+      </div>
+
+      <div class="row">
+        <div class="col">
+          <div class="card">
+            <img src="..." class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+            <div class="card-footer">2021</div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="..." class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
