own css file added

--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
       integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
       crossorigin="anonymous"
     />
+    <!-- musu css failas visada turi buti po bootrap failu -->
+    <link rel="stylesheet" href="style.css" />
 
     <title>BS4</title>
   </head>
   <body class="pb-5 mb-5">
     <div class="container">
       <div class="alert alert-danger">This is and important message</div>
-      <h1 class="display-2">Intro into bootstrap</h1>
+      <h1 class="display-2 bg-info">Intro into bootstrap</h1>
       <h2 class="display-4">smaller</h2>
       <input class="form-control mb-3" type="text" placeholder="Enter text" />
       <button class="btn btn-outline-info d-block">Click me</button>
@@ -45,7 +47,11 @@
       <div class="row">
         <div class="col">
           <div class="card">
-            <img src="..." class="card-img-top" alt="..." />
+            <img
+              src="https://placeimg.com/540/580/nature"
+              class="card-img-top"
+              alt="..."
+            />
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
               <p class="card-text">
@@ -58,8 +64,12 @@
           </div>
         </div>
         <div class="col">
-          <div class="card">
-            <img src="..." class="card-img-top" alt="..." />
+          <div class="card bg-info">
+            <img
+              src="https://placeimg.com/540/480/nature"
+              class="card-img-top"
+              alt="..."
+            />
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
               <p class="card-text">
